# cg_introduction

./: .gitignore  CMakeLists.txt  LICENSE
lesson_1/sources/: main.tex
lesson_2/: Math.h
lesson_3/: CMakeLists.txt  main.cpp  utils.h
lesson_4/: CMakeLists.txt  main.cpp
lesson_5/: CMakeLists.txt  triangle.cpp  triangle.h
lesson_6/: CMakeLists.txt  rasterizer.cpp  rasterizer.h
